// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Heading Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Headings are used for showing content hierarchy and are important for improving the reading experience for our users. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <h1
            className="Heading__StyledHeading-gucmUp dqcIYA"
            data-test={undefined}
          >
            Orbit design system
          </h1>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Heading
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Orbit design system
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Heading
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Heading Inverted heading 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Inverted heading
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Headings are used for showing content hierarchy and are important for improving the reading experience for our users. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "#46515E",
                "padding": 20,
              }
            }
          >
            <h1
              className="Heading__StyledHeading-gucmUp jmAEds"
              data-test={undefined}
            >
              Orbit design system
            </h1>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        div
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            style
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    padding
                                  </span>
                                  : 
                                  <span>
                                    {
                                    <span
                                      style={
                                        Object {
                                          "color": "#a11",
                                        }
                                      }
                                    >
                                      20
                                    </span>
                                    }
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    backgroundColor
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    #46515E
                                    "
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          Heading
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  display
                                  "
                                </span>
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              element
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  h1
                                  "
                                </span>
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              inverted
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 48,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          Orbit design system
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          Heading
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        div
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Heading Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <h2
            className="Heading__StyledHeading-gucmUp jpPdrx"
            data-test="test"
          >
            Orbit design system
          </h2>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Heading
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            element
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                h2
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                display
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            dataTest
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                test
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            spaceAfter
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#777",
                                    }
                                  }
                                >
                                  null
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Orbit design system
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Heading
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Heading Title 1 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Title 1
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Headings are used for showing content hierarchy and are important for improving the reading experience for our users. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <h1
            className="Heading__StyledHeading-gucmUp dqcIYA"
            data-test={undefined}
          >
            Orbit design system
          </h1>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Heading
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                title1
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            element
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                h1
                                "
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Orbit design system
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Heading
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Heading Title 2 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Title 2
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Headings are used for showing content hierarchy and are important for improving the reading experience for our users. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <h2
            className="Heading__StyledHeading-gucmUp eKGySM"
            data-test={undefined}
          >
            Orbit design system
          </h2>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Heading
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                title2
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            element
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                h2
                                "
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Orbit design system
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Heading
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Heading Title 3 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Title 3
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Headings are used for showing content hierarchy and are important for improving the reading experience for our users. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <h3
            className="Heading__StyledHeading-gucmUp hgjEuM"
            data-test={undefined}
          >
            Orbit design system
          </h3>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Heading
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                title3
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            element
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                h3
                                "
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Orbit design system
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Heading
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Heading Title 4 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Title 4
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Headings are used for showing content hierarchy and are important for improving the reading experience for our users. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <h4
            className="Heading__StyledHeading-gucmUp jNzjuq"
            data-test={undefined}
          >
            Orbit design system
          </h4>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Heading
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                title4
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            element
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                h4
                                "
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Orbit design system
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Heading
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Heading Title Display 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Title Display
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Headings are used for showing content hierarchy and are important for improving the reading experience for our users. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <h1
            className="Heading__StyledHeading-gucmUp jpPdrx"
            data-test={undefined}
          >
            Orbit design system
          </h1>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Heading
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                display
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            element
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                h1
                                "
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Orbit design system
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Heading
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
